Fix IntelliJ GameLauncher run configuration